<resources>
    <string name="app_name">KartuNamaDigital</string>
    <string name="pindai_kartu">Pindai Kartu</string>
    <string name="buat_kartu_digital">Buat Kartu Digital</string>
    <string name="kartu_nama_digital">Kartu Nama Digital</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="email">Email</string>
    <string name="tulis_ke_nfc">Tulis ke NFC</string>
    <string name="hasil_pindai_nfc">Hasil Pindai NFC</string>
    <string name="namanfc">Nama : -</string>
    <string name="teleponnfc">Telepon : -</string>
    <string name="emailnfc">Email : -</string>
    <string name="hasil_pindai_nfcc">Hasil Pindai NFC</string>
    <string name="namapindai">Nama : -</string>
    <string name="teleponpindai">Telepon : -</string>
    <string name="emailpindai">Email : -</string>
    <string name="isidtl">Isi</string>
    <string name="id_tagdtl">ID Tag</string>
    <string name="teknologidtl">Teknologi</string>
    <string name="isi_tag">Isi</string>
    <string name="id_tag_tag">ID Tag</string>
    <string name="teknologi_tag">Teknologi</string>
    <string name="kartu_nama_digital_jdl">Kartu Nama Digital</string>
    <string name="nama_buat">Nama</string>
    <string name="telepon_buat">Telepon</string>
    <string name="email_buat">Email</string>
    <string name="tulis_ke_nfc_btn">Tulis ke NFC</string>
    <string name="smartcardID_jdl">SmartCardID</string>
    <string name="create_digital_card">Create Digital Card</string>
    <string name="read">Read\nScan Start</string>
    <string name="scanning">Scanning</string>
    <string name="write_to_NFC_btn">Write to NFC</string>
    <string name="name_buat">name</string>
    <string name="phone_buat">Phone</string>
    <string name="na_buat">Name</string>
    <string name="Name_buat">Name</string>
    <string name="namee_buat">Name</string>
    <string name="smartcardid">SmartCardID</string>
    <string name="create_digital_card_btn">Create Digital Card</string>
    <string name="scan_nfc_card">Scan NFC Card</string>
    <string name="nfc_status">NFC Status</string>
    <string name="checking_device">Checking device...</string>
    <string name="smartcardid_">SmartCardID</string>
    <string name="create_digital_card_">Create Digital Card</string>
    <string name="scan_nfc_card_">Scan NFC Card</string>
    <string name="check_nfc_status_">Check NFC Status</string>
    <string name="smartcardid_id">SmartCardID</string>
    <string name="create_digital_card_bt">Create Digital Card</string>
    <string name="scan_nfc_card_bt">Scan NFC Card</string>
</resources>